apps/production/resumelo-ui/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resumelo-ui
  namespace: resumelo-ui-dev
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: resumelo-ui
          image: "registry.yesidlopez.de/resumelo-ui-dev:v20260514.000000.0000000" # {"$imagepolicy": "resumelo-ui-dev:resumelo-ui-dev"}
